# GradBoxLLM

./: .gitignore  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
app/: app.py  gradBoxTool.py  gradapp.py  gradapp_lite.py  pdf_to_vectorstore.py  pyproject.toml  rag_to_gemini.py
app/.streamlit/: auth_streamlit_app.yaml
app_lite/: Dockerfile  pdf_to_vectorstore.py  rag_to_gemini.py  streamlit_app_lite.py
cloud_app/: gradapp.py  rag.py  requirements.txt
cloud_app/.streamlit/: auth_streamlit_app_lite.yaml
cloud_app/faissIndex/: index.pkl
cloud_app/streamlit/: auth_streamlit_app.yaml  config.toml
experimental/: .python-version  GradBox.ipynb  createSmallerPdf.py  geminiExtractChapterInfo.py  parse.ipynb  pyproject.toml  uvInstallAndPath.sh  venvCreate.sh
experimental/experimental.egg-info/: PKG-INFO  SOURCES.txt
experimental/src/: pdfPathDict.py  prefixPdf.py  promptGeminiPDF.py
public_app/: gradapp.py  gradapp_demo.py  requirements.txt
public_app/.streamlit/: auth_streamlit_app_lite.yaml
public_app/faissIndex/: index.faiss
seb/: .env  pyproject.toml
taylor/: Untitled.ipynb  app.py  app2.py  gradBoxTool.py  htmlTemplates.py  pyproject.toml
