[project]
name = "experimental"
version = "0.1.0"
description = "GradBoxLLM Experimental pyenv."
readme = "README.md"
requires-python = ">=3.10,<=3.11"
dependencies = [
    "frontend>=0.0.3",
    "google-genai>=1.1.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "keyring>=25.6.0",
    "keyrings-alt>=5.0.2",
    "pathlib>=1.0.1",
    "pdfplumber>=0.11.5",
    "pymupdf>=1.25.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "secretstorage>=3.3.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
