[project]
name = "taylor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.10.0",
    "google-genai>=1.2.0",
    "huggingface-hub>=0.28.1",
    "langchain>=0.3.18",
    "openai>=1.62.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.0",
    "watchdog>=6.0.0",
]
