[project]
name = "taylor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair==4",
    "faiss-cpu==1.7.4",
    "huggingface-hub==0.14.1",
    "instructorembedding==1.0.1",
    "langchain==0.0.184",
    "pypdf2>=3.0.1",
    "python-dotenv==1.0.0",
    "sentence-transformers==2.2.2",
    "streamlit==1.18.1",
    "tiktoken==0.4.0",
]
